# xplayground

./: .eslintrc.cjs  .gitattributes  .gitignore  .npmrc  .prototools  AFTER_RELEASE.md  AGENTS.md  BEFORE_PUBLIC_CHECKLIST.md  BUILD.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_GUIDE.md  DISTRIBUTION.md  GEMINI.md  LICENSE  QUICK_START_DISTRIBUTION.md  README.md  READY_TO_DEPLOY.md  SECURITY.md  START_HERE.md  electron.vite.config.ts  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
design-system/xtoolbox/: MASTER.md
docs/: CLI.md  DESIGN_SYSTEM.md
homebrew-tap/: README.md
homebrew-tap/Casks/: xtoolbox.rb
native/: Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml
native/src/: lib.rs
native/src/clipboard/: mod.rs  monitor.rs  types.rs
scripts/: README.md  create-release.sh  install.sh  notarize.sh  prepare-release.sh  release.sh  update-homebrew.sh
src/main/: index.ts  tsconfig.json
src/main/cli/: clipboard-cli.ts
src/preload/: index.ts  tsconfig.json
src/renderer/: App.tsx  app.tsx  env.d.ts  index.html  jsx-compat.d.ts  main.tsx  overlay-main.tsx  overlay.html  popup-main.tsx  popup.html  tsconfig.json
src/renderer/components/: Sidebar.tsx  clipboard-popup.tsx  dashboard.tsx  keyboard-shortcuts-dialog.css  keyboard-shortcuts-dialog.tsx  sidebar.tsx  titlebar.tsx  tool-container.tsx
tests/e2e/: app.spec.ts
tests/unit/: clipboard-popup-navigation.test.ts  clipboard-types.test.ts  example.test.ts
(+69 files in other folders)
