[package]
name = "xtoolbox-native"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
objc-foundation = "0.1"
block = "0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
